...
      'singer': "Tanjiro Uzumaki",
      'url':
          "https://assets.mixkit.co/music/preview/mixkit-tinsel-and-mistletoe-93.mp3",
      'coverUrl': 'images/ariana.jpg',
    },
    {
      'title': "Chill bro",
      'singer': "Hovey Benjamin",
      'url':
          "https://audio-previews.elements.envatousercontent.com/files/280033962/preview.mp3?response-content-disposition=attachment%3B+filename%3D%229PKANYU-chill-bro.mp3%22",
      'coverUrl': 'images/hovey.jpeg',
    },
  ];

...
